# TripleSphere

./: CMakeLists.txt  LICENSE  README.md  TripleSphere.sln
TripleSphere/: TripleSphere.cpp  TripleSphere.vcxproj  TripleSphere.vcxproj.filters
data/: 15order_bluenoise_a_matrix.csv
data/bsdf/: 15order_bluenoise_lobe_dirs.csv  15order_diffuse.csv  9order_bluenoise_a_matrix.csv  9order_bluenoise_lobe_dirs.csv
include/: SHUtils.h  TripleSphere.h  VecType.h
tests/: BRDF.h  ProjectBRDF.cpp  TestMC.cpp
